--- a/templates/home.html
+++ b/templates/home.html
@@ -126,6 +126,7 @@
     <input type="submit" class="btn danger" name="submit" value="Delete user account" id="delete-account" style="float:right;margin:23px 20px 0 0;"/>
     
   	<form action="/" method="post" accept-charset="utf-8" class="form-stacked">
+      {% csrf_token %}
   	  <strong>Update your note to visitors and/or user info:</strong>
   	  <fieldset>
   	    {% if username_taken %}
@@ -151,6 +152,7 @@
     
     <div style="width:502px;margin-left:auto;margin-right:auto;padding:40px 0 30px 0;">
       <form action="/" method="post" accept-charset="utf-8" class="form-stacked">
+        {% csrf_token %}
     	  {# <strong>Update your public message and user info:</strong> #}
     	  <fieldset>
     	    {% if username_taken %}
